--- a/src/Components/VendorsList/VendorsList.scss
+++ b/src/Components/VendorsList/VendorsList.scss
@@ -1,6 +1,7 @@
 .vendor-list {
     width: 100%;
     padding-top: 5.5rem;
+    padding-bottom: 3rem;
     display: flex;
     flex-direction: column;
     align-items: center;
