--- a/src/Components/Item/Item.scss
+++ b/src/Components/Item/Item.scss
@@ -1,9 +1,8 @@
-.vendor {
-    width: 85vw;
+.item {
+    //width: 100%;
     height: 5rem;
     display: flex;
-    border: 1px solid #c9bce7;
-    border-radius: 5px;
+    border-bottom: 1px solid #c9bce7;
     align-items: center;
     padding: 0.5rem;
     margin: 0.25rem 0;
@@ -11,7 +10,7 @@
 
     &__left {
         width: 10rem;
-        height: 3.5rem;
+        height: 100%;
         padding-right: 0.75rem;
     }
 
@@ -37,6 +36,29 @@
         font-size: 0.5rem;
         text-align: left;
         color: #c9bce7;
+        margin-bottom: 0.5rem;
+    }
+
+    &__bottom {
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+        align-items: baseline;
+    }
+
+    &__price {
+        font-size: 0.5rem;
+        text-align: left;
+        color: #c9bce7;
+        font-weight: bold;
+    }
+
+    &__button {
+        height: 1.25rem;
+        font-size: 0.5rem;
+        color: #ffffff;
+        background-color: #8b70cd;
+        border-style: none;
     }
 }
 
