--- a/src/Components/Item/Item.scss
+++ b/src/Components/Item/Item.scss
@@ -7,6 +7,7 @@
     padding: 0.5rem;
     margin: 0.25rem 0;
     background-color: #ffffff;
+    width: 100%;
 
     &__left {
         width: 10rem;
@@ -23,6 +24,7 @@
     &__right {
         display: flex;
         flex-direction: column;
+        width: 100%;
     }
 
     &__name {
@@ -60,6 +62,8 @@
         background-color: #8b70cd;
         border-style: none;
     }
+
+    
 }
 
 .vendor:hover {
