--- a/src/Components/Itemv2/Itemv2.scss
+++ b/src/Components/Itemv2/Itemv2.scss
@@ -1,9 +1,8 @@
-.vendor {
-    width: 85vw;
+.itemv2 {
+    //width: 100%;
     height: 5rem;
     display: flex;
-    border: 1px solid #c9bce7;
-    border-radius: 5px;
+    border-bottom: 1px solid #c9bce7;
     align-items: center;
     padding: 0.5rem;
     margin: 0.25rem 0;
@@ -24,7 +23,6 @@
     &__right {
         display: flex;
         flex-direction: column;
-        width: 100%;
     }
 
     &__name {
@@ -38,6 +36,39 @@
         font-size: 0.5rem;
         text-align: left;
         color: #c9bce7;
+        margin-bottom: 0.5rem;
+    }
+
+    &__bottom {
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+        align-items: baseline;
+    }
+
+    &__price {
+        font-size: 0.5rem;
+        text-align: left;
+        color: #c9bce7;
+        font-weight: bold;
+    }
+
+    &__buttons {
+        display: flex;
+    }
+
+    &__button {
+        height: 1.25rem;
+        font-size: 0.5rem;
+        color: #ffffff;
+        background-color: #8b70cd;
+        border-style: none;
+        margin-left: 0.25rem;
+    }
+
+    &__icon {
+        height: 1rem;
+        width: 1rem;
     }
 }
 
