--- a/src/Components/VendorsList/VendorsList.scss
+++ b/src/Components/VendorsList/VendorsList.scss
@@ -5,6 +5,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    &__link {
+        text-decoration: none;
+    }
+    
     
 
     background-color: #e7e1f5;
