--- a/src/Components/MyKitchen/MyKitchen.scss
+++ b/src/Components/MyKitchen/MyKitchen.scss
@@ -23,13 +23,13 @@
         align-items: flex-start;
         border-bottom: 2px solid #c9bce7;
         padding-bottom: 0.5rem;
-        height: 11rem;
+        //height: 11rem;
     }
 
     &__add-item {
         border-bottom: 2px solid #c9bce7;
         padding-bottom: 0.5rem;
-        height: 16rem;
+        //height: 16rem;
     }
 
     &__input-container {
